welcome.lessons.welcome.instructions.Instructions.scala.error
Program:3: error: type mismatch;
 found   : Unit
 required: Int => ?
	forward()
               ^